Fixed text overflow on app bar in AddItemModal.tsx

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,9 +10,6 @@ button:focus {
     @apply border border-light-gray rounded-lg
 }
 
-.paperCardActive {
-    @apply bg-white shadow-lg rounded-lg border border-light-gray
-}
 
 /* purgecss end ignore */
 
